Updated diffusion map visualizations
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -55,7 +55,7 @@
     "# export\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def plot_directed_2d(X, flows, labels=None, mask_prob=0.5, cmap=\"viridis\", ax=None, save = False, use_streamlines = True, title = \"\", filename = \"\", equal_aspect_ratio = True):    \n",
+    "def plot_directed_2d(X, flows, labels=None, mask_prob=0.5, cmap=\"viridis\", ax=None, save = False, use_streamlines = True, title = \"\", filename = \"\", equal_aspect_ratio = True, minimal=False):    \n",
     "    num_nodes = X.shape[0]\n",
     "    alpha_points, alpha_arrows = (0.1, 1) if labels is None else (1, 0.1)\n",
     "    if ax is None:\n",
