Added PHATE integration, plus benchmark results via papermill

--- a/nbs/05 Benchmarks/05f Metrics for Benchmarking.ipynb
+++ b/nbs/05 Benchmarks/05f Metrics for Benchmarking.ipynb
@@ -135,7 +135,7 @@
     "# export\n",
     "from FRED.inference import diffusion_flow_integration\n",
     "from tqdm.notebook import trange, tqdm\n",
-    "def monotone_increasing_metric(embedded_points, embedded_velocities, time_labels, num_samples = 1000, flow_strength=5):\n",
+    "def monotone_increasing_metric(embedded_points, embedded_velocities, time_labels, num_samples = 100, flow_strength=5):\n",
     "    # sample random starting points\n",
     "    idxs = torch.randint(len(embedded_points), size=[num_samples])\n",
     "    neg_diffs = 0\n",
@@ -182,7 +182,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('FRED')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
