--- a/nbs/05 Benchmarks/05g01 Results with FRED on Single Cell Datasets with UMAP.ipynb
+++ b/nbs/05 Benchmarks/05g01 Results with FRED on Single Cell Datasets with UMAP.ipynb
@@ -10,9 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device cpu\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Using device cpu\n"
      ]
     }
    ],
@@ -69,7 +67,7 @@
    "outputs": [],
    "source": [
     "parameters_dict = {\n",
-    "    'notebook' : ['nbs/05 Benchmarks/05g Single Cell Dataset Benchmarker with UMAP.ipynb'], # the notebook we are inserting these parameters into\n",
+    "    'notebook' : ['nbs/05 Benchmarks/05g Single Cell Dataset Benchmarker with UMAP base.ipynb'], # the notebook we are inserting these parameters into\n",
     "    'dataset_name' : ['bone marrow', 'dentategyrus','pancreas','dentategyrus_lamanno'],\n",
     "    'sigma' : ['automatic'],\n",
     "    'flow_strength' : [1],\n",
@@ -120,9 +118,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "FREDkernel",
+   "display_name": "FREDtake2",
    "language": "python",
-   "name": "fredkernel"
+   "name": "fredtake2"
   }
  },
  "nbformat": 4,
