New dataset constructor for better batching

--- a/nbs/04 Training Machinery/04b Visualizations for Training.ipynb
+++ b/nbs/04 Training Machinery/04b Visualizations for Training.ipynb
@@ -192,9 +192,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('FRED')",
+   "display_name": "FREDkernel",
    "language": "python",
-   "name": "python3"
+   "name": "fredkernel"
   }
  },
  "nbformat": 4,
