Bugs ironed out of new contrastive loss, with new best performance on toy datasets

--- a/nbs/03 Model and Loss Functions/03c01 Diffusion Map MSE.ipynb
+++ b/nbs/03 Model and Loss Functions/03c01 Diffusion Map MSE.ipynb
@@ -63,7 +63,10 @@
     "    # ditto for far distances\n",
     "    far_dists_embedded = torch.linalg.vector_norm(embedded_points[center_point_idxs] - embedded_points[farbor_idxs])\n",
     "    far_dist_loss = torch.linalg.vector_norm(far_dists_embedded - far_distances_precomputed)\n",
-    "    return near_dist_loss + far_dist_loss"
+    "    combined_loss = far_dist_loss + near_dist_loss\n",
+    "    # normalize by number of points\n",
+    "    combined_loss /= (len(center_point_idxs))\n",
+    "    return combined_loss"
    ]
   }
  ],
