--- a/nbs/03 Model and Loss Functions/03c02 Flow Neighbor MSE.ipynb
+++ b/nbs/03 Model and Loss Functions/03c02 Flow Neighbor MSE.ipynb
@@ -71,7 +71,10 @@
     "        center_point_idxs,\n",
     "        neighbor_idxs, # a list of size batch_size/2, mapping point i in the batch to its neighbor in the batch, neighbor[i]\n",
     "        use_distance_kernel = True,\n",
+    "        only_learn_flows = False,\n",
     "        ): # Could be a list of positive indices\n",
+    "    if only_learn_flows:\n",
+    "        embedded_points = embedded_points.detach()\n",
     "    if use_distance_kernel: # best for high-dimensional embeddings; doesn't work in 2d\n",
     "        A = flashlight_kernel(embedded_points,embedded_flows,kernel_type='fixed',sigma=0.7)\n",
     "    else:\n",
