--- a/nbs/05 Benchmarks/05i_noise_stability_benchmark.ipynb
+++ b/nbs/05 Benchmarks/05i_noise_stability_benchmark.ipynb
@@ -9,7 +9,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device mps\n"
+      "Using device cpu\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -18,8 +20,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
+    "from tqdm.notebook import tqdm, trange\n",
     "import FRED\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else 'mps' if torch.has_mps else \"cpu\")\n",
+    "device = torch.device(\"cpu\")\n",
     "print(\"Using device\", device)\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -92,10 +96,20 @@
     "from FRED.data_processing import dataloader_from_ndarray_V2\n",
     "from FRED.embed import ManifoldFlowEmbedder\n",
     "from FRED.trainers import Trainer, visualize_points\n",
-    "def noise_stability_test(X, flow, labels, noise_level = 0.1, method = \"FRED\"):\n",
+    "from FRED.metrics import silhouette_metric, nn_classification_metric\n",
+    "import sklearn.metrics\n",
+    "def noise_stability_test(\n",
+    "        X, \n",
+    "        flow, \n",
+    "        labels, \n",
+    "        noise_level = 0.1, \n",
+    "        method = \"FRED\"):\n",
     "    \"\"\"\n",
     "    Tests the robustness of a method against noise added to both points and flows.\n",
     "    \"\"\"\n",
+    "    X = torch.tensor(X).to(device)\n",
+    "    flow = torch.tensor(flow).to(device)\n",
+    "    labels = torch.tensor(labels)\n",
     "    # add noise to points\n",
     "    X_noisy = X + torch.rand_like(X)*noise_level*max(torch.linalg.norm(X,axis=1))\n",
     "    # randomly reverse some percentage of the flow\n",
@@ -103,10 +117,10 @@
     "    chosen_idxs = torch.rand(len(flow)) > noise_level\n",
     "    flow_noisy[chosen_idxs] *= -1\n",
     "    match method:\n",
-    "        case \"umap\":\n",
+    "        case \"UMAP\":\n",
     "            # Fit UMAP (proxy for scvelo)\n",
     "            reducer = umap.UMAP()\n",
-    "            umap_coords = torch.tensor(reducer.fit_transform(X_noisy))\n",
+    "            embedded_points = torch.tensor(reducer.fit_transform(X_noisy.cpu().numpy()))\n",
     "        case \"FRED\":\n",
     "            # Train FRED\n",
     "            # build dataloader and set up FRED\n",
@@ -132,13 +146,25 @@
     "                    data_type=\"Contrastive Flow\",\n",
     "                    scheduler=None,\n",
     "                    learning_rate=1e-3)\n",
-    "            FREDtrainer.fit(dataloader, n_epochs = 1000)\n",
+    "            FREDtrainer.fit(dataloader, n_epochs = 200)\n",
     "            FREDtrainer.visualize_embedding()\n",
-    "            fred_coords = FREDtrainer.embedded_points\n",
+    "            embedded_points = FREDtrainer.embedded_points\n",
     "        case _:\n",
     "            raise NotImplementedError(\"Must Specify UMAP or FRED\")\n",
     "    # Run metrics on points\n",
-    "    \n"
+    "    silhouette_score = sklearn.metrics.silhouette_score(embedded_points, labels)\n",
+    "    knn_score = nn_classification_metric(embedded_points, torch.zeros_like(embedded_points),labels)\n",
+    "    print(f\"With noise level {noise_level}, {method} achieved a silhouette score of {silhouette_score} and knn score of {knn_score}\")\n",
+    "    return {\"silhouette score\": silhouette_score, \"knn score\":knn_score}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# noise_stability_test(X,flow,labels,noise_level = 0.1, method=\"UMAP\")"
    ]
   },
   {
@@ -148,58 +174,44 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "703a65ae8a954929a75b8a53fde153f6",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "tensor([True, True, True,  ..., True, True, True])"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": null,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.rand(len(flow)) > 0.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flow[torch.rand(len(flow)) > 0.1] *= -1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
     {
-     "data": {
-      "text/plain": [
-       "array([[ 0.0312342 ,  0.01645556, -0.0887748 , ..., -0.01706855,\n",
-       "        -0.00670738, -0.01429297],\n",
-       "       [ 0.02287296, -0.00859926, -0.07289554, ..., -0.0130601 ,\n",
-       "        -0.00387765, -0.00150005],\n",
-       "       [ 0.00143617,  0.00117963,  0.01831046, ..., -0.00938447,\n",
-       "         0.0002142 ,  0.00056758],\n",
-       "       ...,\n",
-       "       [ 0.02528729,  0.01144369, -0.01577021, ..., -0.01627857,\n",
-       "        -0.00110882, -0.00568943],\n",
-       "       [ 0.03875643, -0.03800944, -0.01107999, ...,  0.00150418,\n",
-       "         0.00441471,  0.00549325],\n",
-       "       [ 0.05843243, -0.08093039,  0.09355683, ..., -0.00656454,\n",
-       "         0.05342222, -0.01849617]])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With noise level 0.1, UMAP achieved a silhouette score of 0.2762521207332611 and knn score of 0.8827868852459017\n",
+      "With noise level 0.2, UMAP achieved a silhouette score of 0.1779542863368988 and knn score of 0.828688524590164\n",
+      "With noise level 0.3, UMAP achieved a silhouette score of 0.11885758489370346 and knn score of 0.7295081967213115\n",
+      "With noise level 0.4, UMAP achieved a silhouette score of 0.07185406982898712 and knn score of 0.6319672131147541\n",
+      "With noise level 0.5, UMAP achieved a silhouette score of 0.005424517206847668 and knn score of 0.5336065573770492\n",
+      "With noise level 0.6, UMAP achieved a silhouette score of -0.01959528774023056 and knn score of 0.45\n",
+      "With noise level 0.7, UMAP achieved a silhouette score of -0.0642647072672844 and knn score of 0.3557377049180328\n",
+      "With noise level 0.8, UMAP achieved a silhouette score of -0.06862875819206238 and knn score of 0.32049180327868854\n",
+      "With noise level 0.9, UMAP achieved a silhouette score of -0.07849527150392532 and knn score of 0.25\n",
+      "With noise level 1, UMAP achieved a silhouette score of -0.10564509779214859 and knn score of 0.22213114754098362\n"
+     ]
     }
    ],
    "source": [
-    "flow[torch.rand(len(flow)) > 0.1]"
+    "# test UMAP with added noise\n",
+    "umap_silhouettes = []\n",
+    "umap_knn_scores = []\n",
+    "noises = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1]\n",
+    "for ns in tqdm(noises):\n",
+    "    d = noise_stability_test(X,flow,labels,noise_level = ns, method=\"UMAP\")\n",
+    "    umap_silhouettes.append(d[\"silhouette score\"])\n",
+    "    umap_knn_scores.append(d[\"knn score\"])"
    ]
   },
   {
@@ -207,7 +219,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# test UMAP with added noise\n",
+    "fred_silhouettes = []\n",
+    "fred_knn_scores = []\n",
+    "noises = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1]\n",
+    "for ns in tqdm(noises):\n",
+    "    d = noise_stability_test(X,flow,labels,noise_level = ns, method=\"FRED\")\n",
+    "    umap_silhouettes.append(d[\"silhouette score\"])\n",
+    "    umap_knn_scores.append(d[\"knn score\"])"
+   ]
   }
  ],
  "metadata": {
