--- a/nbs/05 Benchmarks/05c01 Results with FRED on Single Cell Datasets.ipynb
+++ b/nbs/05 Benchmarks/05c01 Results with FRED on Single Cell Datasets.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device cuda\n",
+      "Using device cpu\n",
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
      ]
@@ -74,11 +74,10 @@
     "    'sigma' : ['automatic'],\n",
     "    'flow_strength' : [10,20],\n",
     "    'smoothness_weight' : [0],\n",
-    "    'flow_neighbor_loss_weight' : [1, 10],\n",
-    "    'contrastive_flow_loss_weight':[10, 20],\n",
-    "    'diffdist_weight' : [1, 10],\n",
+    "    'contrastive_loss_weight':[1, 10, 20],\n",
+    "    'diffdist_weight' : [1, 10, 100],\n",
     "    'num_neighbors' : [10, 20],\n",
-    "    'diffusion_map_dimension':[5,10,15,20,30]\n",
+    "    'prior_embedding':['UMAP','PHATE','diffusion map']\n",
     "}"
    ]
   },
@@ -100,13 +99,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created 640 test scenarios.\n"
+      "Created 432 test scenarios.\n"
      ]
     }
    ],
    "source": [
     "from FRED.testing_utils import parameters_list_from_dict\n",
-    "parameters_list_from_dict(parameters_dict, 'ANATOLE_RAPATOR.txt', filetype='dsq', )"
+    "parameters_list_from_dict(parameters_dict, 'New_contrastive_loss_tests.txt', filetype='dsq', )"
    ]
   },
   {
@@ -120,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "flowartist",
    "language": "python",
    "name": "python3"
   }
